--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,28 +1,17 @@
 pipeline {
     agent any
 
-    environment {
-        // Optional environment variables
-        APP_ENV = 'dev'
-    }
-
-    tools {
-        jdk 'jdk17'        // The JDK configured in Jenkins
-        maven 'maven-3.9'  // The Maven configured in Jenkins
-    }
-
     stages {
         stage('Clone') {
             steps {
-                // Pull your project from main branch
-                git branch: 'main', url: 'https://github.com/Chintharlaakshaya/jenkinsgitintegration.git'
+                echo 'Cloning repository...'
+                git 'https://github.com/Chintharlaakshaya/jenkinsgitintegration.git'
             }
         }
 
         stage('Build') {
             steps {
-                echo 'Building the project...'
-                // Run Maven build
+                echo 'Building project...'
                 bat 'mvn clean install'
             }
         }
@@ -30,12 +19,11 @@ pipeline {
         stage('Test') {
             steps {
                 echo 'Running tests...'
-                // Run Maven tests
                 bat 'mvn test'
             }
             post {
                 always {
-                    // Publish TestNG results in Jenkins
+                    // Publish TestNG results
                     junit '**/test-output/testng-results.xml'
                 }
             }
@@ -43,8 +31,8 @@ pipeline {
 
         stage('Deploy') {
             steps {
-                echo "Deploying to ${env.APP_ENV} environment..."
-                // Optional deployment logic can go here
+                echo 'Deploying project...'
+                // Add your deployment commands here if needed
             }
         }
     }
