--- a/JenkinsFile
+++ b/JenkinsFile
@@ -57,6 +57,23 @@ pipeline {
             }
         }
     }
+    
+    stage('Push Changes to Git') {
+            steps {
+                script {
+                    withCredentials([usernamePassword(credentialsId: "${GIT_CREDENTIALS_ID}", usernameVariable: 'GIT_USER', passwordVariable: 'GIT_PASS')]) {
+                        bat """
+                            git config user.email "jenkins@server.com"
+                            git config user.name "Jenkins CI"
+                            git add .
+                            git commit -m "Automated commit from Jenkins pipeline" || echo "No changes to commit"
+                            git push https://${GIT_USER}:${GIT_PASS}@github.com/Chintharlaakshaya/jenkinsgitintegration.git ${BRANCH}
+                        """
+                    }
+                }
+            }
+        }
+    }
 
     // Post-build actions that run regardless of the stage results.
     post {
