--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,64 +1,53 @@
 pipeline {
-    // Defines where the pipeline will run. 'any' means any available agent.
     agent any
 
-    // Defines the tools required for the build. These must be configured in Jenkins.
     tools {
-        maven 'Maven'
+        maven 'Meaven'
         jdk 'JDK17'
     }
 
+    environment {
+        GIT_CREDENTIALS_ID = 'github-creds'
+        REPO_URL = 'https://github.com/Chintharlaakshaya/jenkinsgitintegration.git'
+        BRANCH = 'main'
+    }
+
     stages {
-        // Stage 1: Checkout the code from the Git repository.
         stage('Checkout') {
             steps {
-                git branch: 'main', url: 'https://github.com/Chintharlaakshaya/jenkinsgitintegration.git'
+                git branch: "${BRANCH}", url: "${REPO_URL}"
             }
         }
 
-        // Stage 2: Build the project and run all tests.
-               stage('Build and Test') {
+        stage('Build and Test') {
             steps {
-                dir('AutomateNop') {
-                    echo 'Building and running tests with Maven...'
-                    // The 'install' goal runs the 'test' phase automatically.
-                    bat 'mvn clean install'
-                }
+                echo 'Building and running tests with Maven...'
+                bat 'mvn clean install'
             }
         }
 
-        // Stage 3: Publish the generated test reports.
-        // This stage will only execute if the previous stage (Build and Test) passes.
         stage('Publish Reports') {
             steps {
-                dir('AutomateNop') {
-                    echo 'Publishing HTML reports...'
-                    // Publish TestNG HTML report
-                    publishHTML(target: [
-                        reportDir: 'test-output',
-                        reportFiles: 'emailable-report.html',
-                        reportName: 'TestNG Report'
-                    ])
-
-                    // Publish Cucumber report
-                    publishHTML(target: [
-                        reportDir: 'target/cucumber-reports',
-                        reportFiles: 'cucumber-report.html',
-                        reportName: 'Cucumber Report'
-                    ])
-
-                    // Publish Extent Report
-                    publishHTML(target: [
-                        reportDir: 'reports/ExtentReports',
-                        reportFiles: 'ExtentReport_*.html',
-                        reportName: 'Extent Report'
-                    ])
-                }
+                echo 'Publishing HTML reports...'
+                publishHTML(target: [
+                    reportDir: 'test-output',
+                    reportFiles: 'emailable-report.html',
+                    reportName: 'TestNG Report'
+                ])
+                publishHTML(target: [
+                    reportDir: 'target/cucumber-reports',
+                    reportFiles: 'cucumber-report.html',
+                    reportName: 'Cucumber Report'
+                ])
+                publishHTML(target: [
+                    reportDir: 'reports/ExtentReports',
+                    reportFiles: 'ExtentReport_*.html',
+                    reportName: 'Extent Report'
+                ])
             }
         }
-    }
-    
-    stage('Push Changes to Git') {
+
+        stage('Push Changes to Git') {
             steps {
                 script {
                     withCredentials([usernamePassword(credentialsId: "${GIT_CREDENTIALS_ID}", usernameVariable: 'GIT_USER', passwordVariable: 'GIT_PASS')]) {
@@ -75,21 +64,13 @@ pipeline {
         }
     }
 
-    // Post-build actions that run regardless of the stage results.
     post {
-        // Always execute this block after the pipeline finishes.
         always {
-            dir('AutomateNop') {
-		archiveArtifacts artifacts: 'reports/Screenshots/*.png', allowEmptyArchive: true
-		junit 'target/surefire-reports/*.xml'
-
-                
-            }
+            archiveArtifacts artifacts: 'Screenshots/*.png', allowEmptyArchive: true
+            junit 'target/surefire-reports/*.xml'
         }
-        // This block runs if any stage fails.
         failure {
-
-                      echo "Build or Tests Failed. Check Reports."
+            echo "Build or Tests Failed. Check Reports."
         }
     }
 }
